--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
     <title>Megan Bailey | Web Developer</title>
   </head>
   <body>
-    <div class="navbar">
+    <div class="navbar" id="home">
       <div class="navbar__logo-container">
-        <img src="img/logo-bg.png" alt="logo" class="navbar__logo" />
+        <a href="#home">
+          <img src="img/logo-bg.png" alt="logo" class="navbar__logo"
+        /></a>
       </div>
       <ul class="navbar__list">
-        <li class="navbar__item"><a href="#" class="navbar__link">About</a></li>
         <li class="navbar__item">
-          <a href="#" class="navbar__link">Projects</a>
+          <a href="#about" class="navbar__link">About</a>
         </li>
         <li class="navbar__item">
-          <a href="#" class="navbar__link"
+          <a href="#projects" class="navbar__link">Projects</a>
+        </li>
+        <li class="navbar__item">
+          <a href="mailto:megan-bailey@outlook.com" class="navbar__link"
             ><svg
               width="1em"
               height="1em"
@@ -48,50 +52,58 @@
     </header>
 
     <main>
-      <section class="section-about">
+      <section class="section-about" id="about">
         <div class="row">
           <div class="column">
             <p class="paragraph">
               With over 10 years of providing genuine and exceptional customer
               service, I am committed to the customer’s experience and ensuring
-              that they feel understood and genuinely appreciated.
+              that they feel understood and genuinely appreciated. Great
+              customer service can make a truly positive impact for both the
+              company and customers, I strive for that win-win situation to
+              problem-solving.
             </p>
           </div>
 
           <div class="column">
             <p class="paragraph">
-              I design and build custom and responsive websites and
-              applications, including custom WordPress sites. I have a solid
-              understanding of HTML, CSS, SASS, Git, Wordpress, Photoshop, and
-              Illustrator. I also have a great foundational understanding of
-              PHP, Javascript, jQuery, and InDesign. I am forever learning.
+              I design and build custom, responsive websites and applications,
+              including custom WordPress themes. I have a solid understanding of
+              HTML, CSS, SASS, Git, Wordpress, Photoshop, and Illustrator. I
+              also have a great foundational understanding of PHP, Javascript,
+              jQuery, and InDesign. I am forever learning.
             </p>
           </div>
 
           <div class="column">
             <p class="paragraph">
-              I'm currently looking for a <em>remote</em> technical or developer
-              support role. I'd like to apply my experience in both customer
-              service and web development, while continuing to learn and expand
-              my developer skills. I have over 3.5 years of experience working
-              remotely.
+              <strong
+                >I'm currently looking for a <em>remote</em> technical or
+                developer support role.</strong
+              >
+              I'd like to apply my experience in both customer service and web
+              development, while continuing to learn and expand my developer
+              skills. I am a level-headed, self-motivated, and resourceful
+              person. If I don’t know how to do something, I utilize my
+              resources and figure it out.
             </p>
           </div>
         </div>
       </section>
 
       <section class="section-contact">
-        <div class="row">
-          <p class="contact-block">
-            If I can help you build something, or if you think I'd be a great
-            fit for your company, I'd love to hear from you.
+        <div class="contact-block">
+          <p class="paragraph">
+            If you think I'd be a great fit for your company, or if I can help
+            you build something, I'd love to hear from you.
           </p>
-          <a href="#" class="navbar__link"
+
+          <a href="mailto:megan-bailey@outlook.com" class="contact-block__link"
             ><svg
               width="1em"
               height="1em"
               viewBox="0 0 16 16"
-              class="bi bi-envelope navbar__link--envelope"
+              class="bi bi-envelope contact-block--envelope"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -103,10 +115,10 @@
         </div>
       </section>
 
-      <section class="section-projects">
+      <section class="section-projects" id="projects">
         <div class="row">
           <div class="column card">
-            <img src="img/play-atx.png" alt="" class="card__img" />
+            <img src="img/holder.png" alt="" class="card__img" />
             <div class="card__overlay">
               <div class="paragraph">Hello</div>
             </div>
@@ -120,7 +132,7 @@
           </div>
 
           <div class="column card">
-            <img src="img/weather-wise.png" alt="" class="card__img" />
+            <img src="img/holder.png" alt="" class="card__img" />
             <div class="card__overlay">
               <div class="paragraph">Hello</div>
             </div>
@@ -151,8 +163,29 @@
         </div>
       </section>
 
-      <section id="contact" class="section-contact">
-        <p class="paragraph">Have a question or want to work together?</p>
+      <section class="section-contact">
+        <div class="contact-block">
+          <p class="paragraph">
+            Have any questions, or would like to work together? Shoot me an
+            email.
+          </p>
+
+          <a href="mailto:megan-bailey@outlook.com" class="contact-block__link"
+            ><svg
+              width="1em"
+              height="1em"
+              viewBox="0 0 16 16"
+              class="bi bi-envelope contact-block--envelope"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"
+              /></svg
+          ></a>
+          <p class="paragraph">And thanks for stopping by!</p>
+        </div>
       </section>
     </main>
     <footer class="footer">
