most css complete

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="dist/css/style.min.css" />
@@ -118,21 +118,89 @@
       <section class="section-projects" id="projects">
         <div class="row">
           <div class="column card">
-            <img src="img/holder.png" alt="" class="card__img" />
+            <img
+              src="img/holder.png"
+              alt="Chef Blog Wordpress Theme"
+              class="card__img"
+            />
+            <div class="card__title">
+              <h2 class="heading-secondary">
+                Chef Collier Blog
+              </h2>
+              <p class="card-subheading">Custom WordPress Theme</p>
+            </div>
             <div class="card__overlay">
-              <div class="paragraph">Hello</div>
+              <!-- <div class="card__overlay--top">
+                <h2 class="heading-secondary">
+                  Chef Collier Blog
+                </h2>
+                <p class="card-subheading">Custom WordPress Theme</p>
+              </div> -->
+              <div class="card__overlay--bottom">
+                <p class="card-text margin-top-xs">
+                  Clean and modern WordPress blog theme targeted for chefs.
+                  <br />HTML / SASS / PHP
+                </p>
+                <div class="btn-container margin-top-xs">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn card-text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn card-text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="column card">
-            <img src="img/build-it.png" alt="" class="card__img" />
+            <img
+              src="img/build-it.png"
+              alt="Build It PHP App"
+              class="card__img"
+            />
             <div class="card__overlay">
-              <div class="paragraph">Hello</div>
+              <h2 class="heading-secondary">
+                Build It App
+              </h2>
+              <p class="card-subheading">PHP & MySQL Application</p>
+              <p class="card-text margin-top-xs">
+                Add exercises to a database to build your own workout session.
+                <br />HTML / CSS / Materialize / PHP / MySQL
+              </p>
+              <div class="btn-container margin-top-xs">
+                <a
+                  href="https://weather-mlb.herokuapp.com/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Demo</a
+                >
+                <a
+                  href="https://weather-mlb.herokuapp.com/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Code</a
+                >
+              </div>
             </div>
           </div>
 
           <div class="column card">
-            <img src="img/holder.png" alt="" class="card__img" />
+            <img
+              src="img/holder.png"
+              alt="Saint Lorem WordPress Theme"
+              class="card__img"
+            />
             <div class="card__overlay">
               <div class="paragraph">Hello</div>
             </div>
@@ -141,21 +209,33 @@
 
         <div class="row margin-top-md">
           <div class="column card">
-            <img src="img/play-atx.png" alt="" class="card__img" />
+            <img
+              src="img/play-atx.png"
+              alt="Play ATX website"
+              class="card__img"
+            />
             <div class="card__overlay">
               <div class="paragraph">Hello</div>
             </div>
           </div>
 
           <div class="column card">
-            <img src="img/six-sense.png" alt="" class="card__img" />
+            <img
+              src="img/six-sense.png"
+              alt="Six Sense ecommerce site"
+              class="card__img"
+            />
             <div class="card__overlay">
               <div class="paragraph">Hello</div>
             </div>
           </div>
 
           <div class="column card">
-            <img src="img/weather-wise.png" alt="" class="card__img" />
+            <img
+              src="img/weather-wise.png"
+              alt="Weather-Wise App"
+              class="card__img"
+            />
             <div class="card__overlay">
               <div class="paragraph">Hello</div>
             </div>
