--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="navbar" id="home">
       <div class="navbar__logo-container">
         <a href="#home">
-          <img src="img/logo-bg.png" alt="logo" class="navbar__logo"
+          <img src="img/circle-logo-bg.png" alt="logo" class="navbar__logo"
         /></a>
       </div>
       <ul class="navbar__list">
@@ -69,7 +69,7 @@
             <p class="paragraph">
               I design and build custom, responsive websites and applications,
               including custom WordPress themes. I have a solid understanding of
-              HTML, CSS, SASS, Git, Wordpress, Photoshop, and Illustrator. I
+              HTML, CSS, SASS, Git, WordPress, Photoshop, and Illustrator. I
               also have a great foundational understanding of PHP, Javascript,
               jQuery, and InDesign. I am forever learning.
             </p>
@@ -120,61 +120,19 @@
           <div class="column card">
             <img
               src="img/holder.png"
-              alt="Chef Blog Wordpress Theme"
+              alt="Chef Blog WordPress Theme"
               class="card__img"
             />
-            <div class="card__title">
+            <div class="card__details">
               <h2 class="heading-secondary">
                 Chef Collier Blog
               </h2>
               <p class="card-subheading">Custom WordPress Theme</p>
-            </div>
-            <div class="card__overlay">
-              <!-- <div class="card__overlay--top">
-                <h2 class="heading-secondary">
-                  Chef Collier Blog
-                </h2>
-                <p class="card-subheading">Custom WordPress Theme</p>
-              </div> -->
-              <div class="card__overlay--bottom">
-                <p class="card-text margin-top-xs">
-                  Clean and modern WordPress blog theme targeted for chefs.
-                  <br />HTML / SASS / PHP
-                </p>
-                <div class="btn-container margin-top-xs">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn card-text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn card-text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="column card">
-            <img
-              src="img/build-it.png"
-              alt="Build It PHP App"
-              class="card__img"
-            />
-            <div class="card__overlay">
-              <h2 class="heading-secondary">
-                Build It App
-              </h2>
-              <p class="card-subheading">PHP & MySQL Application</p>
+              <p class="card-text card-text__skills">
+                HTML / SASS / PHP
+              </p>
               <p class="card-text margin-top-xs">
-                Add exercises to a database to build your own workout session.
-                <br />HTML / CSS / Materialize / PHP / MySQL
+                Clean and modern WordPress blog theme targeted for chefs.
               </p>
               <div class="btn-container margin-top-xs">
                 <a
@@ -197,25 +155,113 @@
 
           <div class="column card">
             <img
-              src="img/holder.png"
-              alt="Saint Lorem WordPress Theme"
+              src="img/build-it.png"
+              alt="Build It PHP App"
               class="card__img"
             />
-            <div class="card__overlay">
-              <div class="paragraph">Hello</div>
+            <div class="card__details">
+              <h2 class="heading-secondary">
+                Build It App
+              </h2>
+              <p class="card-subheading">PHP & MySQL Site-App</p>
+              <p class="card-text card-text__skills">
+                HTML / CSS / Materialize / PHP / MySQL
+              </p>
+              <p class="card-text margin-top-xs">
+                Add exercises to a database to build your own workout session.
+              </p>
+
+              <div class="btn-container margin-top-xs">
+                <a
+                  href="https://weather-mlb.herokuapp.com/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Demo</a
+                >
+                <a
+                  href="https://weather-mlb.herokuapp.com/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Code</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="column card">
+            <img
+              src="img/holder.png"
+              alt="Saint Lorem WordPress theme"
+              class="card__img"
+            />
+            <div class="card__details">
+              <h2 class="heading-secondary">
+                Saint Lorem Architecture
+              </h2>
+              <p class="card-subheading">Custom WordPress Theme</p>
+              <p class="card-text card-text__skills">
+                HTML / SASS / PHP
+              </p>
+              <hr />
+              <p class="card-text margin-top-xs">
+                Stylish WordPress theme for architecture and interior design
+                firm.
+              </p>
+
+              <div class="btn-container margin-top-xs">
+                <a
+                  href="https://weather-mlb.herokuapp.com/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Demo</a
+                >
+                <a
+                  href="https://weather-mlb.herokuapp.com/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Code</a
+                >
+              </div>
             </div>
           </div>
         </div>
 
         <div class="row margin-top-md">
           <div class="column card">
-            <img
-              src="img/play-atx.png"
-              alt="Play ATX website"
-              class="card__img"
-            />
-            <div class="card__overlay">
-              <div class="paragraph">Hello</div>
+            <img src="img/play-atx.png" alt="Play ATX site" class="card__img" />
+            <div class="card__details">
+              <h2 class="heading-secondary">
+                Play ATX Website
+              </h2>
+              <p class="card-subheading">Custom Static Website</p>
+              <p class="card-text card-text__skills">
+                HTML / SASS / JS Parallax
+              </p>
+              <hr />
+              <p class="card-text margin-top-xs">
+                Playful and informational single page business website.
+              </p>
+
+              <div class="btn-container margin-top-xs">
+                <a
+                  href="https://play-atx.herokuapp.com/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Demo</a
+                >
+                <a
+                  href="https://github.com/mega-bailey/play-atx"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Code</a
+                >
+              </div>
             </div>
           </div>
 
@@ -225,8 +271,35 @@
               alt="Six Sense ecommerce site"
               class="card__img"
             />
-            <div class="card__overlay">
-              <div class="paragraph">Hello</div>
+            <div class="card__details">
+              <h2 class="heading-secondary">
+                Six Sense Website
+              </h2>
+              <p class="card-subheading">Ecommerce</p>
+              <p class="card-text card-text__skills">
+                HTML / SASS / JS
+              </p>
+              <hr />
+              <p class="card-text margin-top-xs">
+                Vanilla JS ecommerce page with shopping cart.
+              </p>
+
+              <div class="btn-container margin-top-xs">
+                <a
+                  href="https://6sense.netlify.app/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Demo</a
+                >
+                <a
+                  href="https://github.com/mega-bailey/6sense"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Code</a
+                >
+              </div>
             </div>
           </div>
 
@@ -236,8 +309,35 @@
               alt="Weather-Wise App"
               class="card__img"
             />
-            <div class="card__overlay">
-              <div class="paragraph">Hello</div>
+            <div class="card__details">
+              <h2 class="heading-secondary">
+                Weather-Wise App
+              </h2>
+              <p class="card-subheading">Weather App</p>
+              <p class="card-text card-text__skills">
+                HTML / CSS / JS & jQuery / Darksky API / Google Places API
+              </p>
+              <hr />
+              <p class="card-text margin-top-xs">
+                Searchable location with 7-day forecast.
+              </p>
+
+              <div class="btn-container margin-top-xs">
+                <a
+                  href="https://weather-mlb.herokuapp.com/"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Demo</a
+                >
+                <a
+                  href="https://github.com/mega-bailey/weather-mlb"
+                  target="_blank"
+                  class="btn card-text"
+                >
+                  Code</a
+                >
+              </div>
             </div>
           </div>
         </div>
