--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </header>
 
     <main>
+      <!-- ABOUT SECTION -->
       <section class="section-about" id="about">
         <div class="row">
           <div class="column">
@@ -91,6 +92,7 @@
         </div>
       </section>
 
+      <!-- CONTACT BLOCK -->
       <section class="section-contact">
         <div class="contact-block">
           <p class="paragraph">
@@ -115,236 +117,230 @@
         </div>
       </section>
 
+      <!-- CARDS/PROJECT GALLERY -->
       <section class="section-projects" id="projects">
-        <div class="row">
-          <div class="column card">
-            <img
-              src="img/holder.png"
-              alt="Chef Blog WordPress Theme"
-              class="card__img"
-            />
-            <div class="card__details">
-              <h2 class="heading-secondary">
-                Chef Collier Blog
-              </h2>
-              <p class="card-subheading">Custom WordPress Theme</p>
-              <p class="card-text card-text__skills">
-                HTML / SASS / PHP
-              </p>
-              <hr />
-              <p class="card-text margin-top-xs">
-                Clean and modern WordPress blog theme targeted for chefs.
-              </p>
-              <div class="btn-container margin-top-xs">
-                <a
-                  href="https://weather-mlb.herokuapp.com/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Demo</a
-                >
-                <a
-                  href="https://weather-mlb.herokuapp.com/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Code</a
-                >
+        <div class="cards-container">
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/holder.png"
+                alt="Chef Blog WordPress Theme"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Chef Collier Blog</h2>
+                <h3 class="card__subtitle">Custom WordPress Theme</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / PHP
+                </p>
+
+                <p class="card__text">
+                  Clean and modern WordPress blog theme targeted for chefs.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
               </div>
             </div>
           </div>
-
-          <div class="column card">
-            <img
-              src="img/build-it.png"
-              alt="Build It PHP App"
-              class="card__img"
-            />
-            <div class="card__details">
-              <h2 class="heading-secondary">
-                Build It App
-              </h2>
-              <p class="card-subheading">PHP & MySQL Site-App</p>
-              <p class="card-text card-text__skills">
-                HTML / CSS / Materialize / PHP / MySQL
-              </p>
-              <hr />
-              <p class="card-text margin-top-xs">
-                Add exercises to a database to build your own workout session.
-              </p>
-
-              <div class="btn-container margin-top-xs">
-                <a
-                  href="https://weather-mlb.herokuapp.com/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Demo</a
-                >
-                <a
-                  href="https://weather-mlb.herokuapp.com/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Code</a
-                >
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/holder.png"
+                alt="Chef Blog WordPress Theme"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Chef Collier Blog</h2>
+                <h3 class="card__subtitle">Custom WordPress Theme</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / PHP
+                </p>
+                <p class="card__text">
+                  Clean and modern WordPress blog theme targeted for chefs.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
               </div>
             </div>
           </div>
-
-          <div class="column card">
-            <img
-              src="img/holder.png"
-              alt="Saint Lorem WordPress theme"
-              class="card__img"
-            />
-            <div class="card__details">
-              <h2 class="heading-secondary">
-                Saint Lorem Architecture
-              </h2>
-              <p class="card-subheading">Custom WordPress Theme</p>
-              <p class="card-text card-text__skills">
-                HTML / SASS / PHP
-              </p>
-              <hr />
-              <p class="card-text margin-top-xs">
-                Stylish WordPress theme for architecture and interior design
-                firm.
-              </p>
-
-              <div class="btn-container margin-top-xs">
-                <a
-                  href="https://weather-mlb.herokuapp.com/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Demo</a
-                >
-                <a
-                  href="https://weather-mlb.herokuapp.com/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Code</a
-                >
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/holder.png"
+                alt="Chef Blog WordPress Theme"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Chef Collier Blog</h2>
+                <h3 class="card__subtitle">Custom WordPress Theme</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / PHP
+                </p>
+                <p class="card__text">
+                  Clean and modern WordPress blog theme targeted for chefs.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="row margin-top-md">
-          <div class="column card">
-            <img src="img/play-atx.png" alt="Play ATX site" class="card__img" />
-            <div class="card__details">
-              <h2 class="heading-secondary">
-                Play ATX Website
-              </h2>
-              <p class="card-subheading">Custom Static Website</p>
-              <p class="card-text card-text__skills">
-                HTML / SASS / JS Parallax
-              </p>
-              <hr />
-              <p class="card-text margin-top-xs">
-                Playful and informational single page business website.
-              </p>
-
-              <div class="btn-container margin-top-xs">
-                <a
-                  href="https://play-atx.herokuapp.com/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Demo</a
-                >
-                <a
-                  href="https://github.com/mega-bailey/play-atx"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Code</a
-                >
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/holder.png"
+                alt="Chef Blog WordPress Theme"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Chef Collier Blog</h2>
+                <h3 class="card__subtitle">Custom WordPress Theme</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / PHP
+                </p>
+                <p class="card__text">
+                  Clean and modern WordPress blog theme targeted for chefs.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
               </div>
             </div>
           </div>
-
-          <div class="column card">
-            <img
-              src="img/six-sense.png"
-              alt="Six Sense ecommerce site"
-              class="card__img"
-            />
-            <div class="card__details">
-              <h2 class="heading-secondary">
-                Six Sense Website
-              </h2>
-              <p class="card-subheading">Ecommerce</p>
-              <p class="card-text card-text__skills">
-                HTML / SASS / JS
-              </p>
-              <hr />
-              <p class="card-text margin-top-xs">
-                Vanilla JS ecommerce page with shopping cart.
-              </p>
-
-              <div class="btn-container margin-top-xs">
-                <a
-                  href="https://6sense.netlify.app/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Demo</a
-                >
-                <a
-                  href="https://github.com/mega-bailey/6sense"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Code</a
-                >
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/holder.png"
+                alt="Chef Blog WordPress Theme"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Chef Collier Blog</h2>
+                <h3 class="card__subtitle">Custom WordPress Theme</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / PHP
+                </p>
+                <p class="card__text">
+                  Clean and modern WordPress blog theme targeted for chefs.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
               </div>
             </div>
           </div>
-
-          <div class="column card">
-            <img
-              src="img/weather-wise.png"
-              alt="Weather-Wise App"
-              class="card__img"
-            />
-            <div class="card__details">
-              <h2 class="heading-secondary">
-                Weather-Wise App
-              </h2>
-              <p class="card-subheading">Weather App</p>
-              <p class="card-text card-text__skills">
-                HTML / CSS / JS & jQuery / Darksky API / Google Places API
-              </p>
-              <hr />
-              <p class="card-text margin-top-xs">
-                Searchable location with 7-day forecast.
-              </p>
-
-              <div class="btn-container margin-top-xs">
-                <a
-                  href="https://weather-mlb.herokuapp.com/"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Demo</a
-                >
-                <a
-                  href="https://github.com/mega-bailey/weather-mlb"
-                  target="_blank"
-                  class="btn card-text"
-                >
-                  Code</a
-                >
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/holder.png"
+                alt="Chef Blog WordPress Theme"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Chef Collier Blog</h2>
+                <h3 class="card__subtitle">Custom WordPress Theme</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / PHP
+                </p>
+                <p class="card__text">
+                  Clean and modern WordPress blog theme targeted for chefs.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
 
+      <!-- CONTACT BLOCK -->
       <section class="section-contact">
         <div class="contact-block">
           <p class="paragraph">
